src/pages/home.scss
@use "src/styles/mixins" as mx;

.home-section {
  display : flex;
  @include mx.mobile() {
	--size-container : 55rem;
	flex-direction   : column;
	gap              : var(--size-lg);
  }
}

.intro {
  overflow-x  : hidden;
  --size-icon : 12.5rem;
  @include mx.desktop() {
	flex-direction : row-reverse;
  }

  @include mx.mobile() {
	--size-icon : 8rem;
  }
}

.avatar {
  --circle-offset-x  : .85em;
  --circle-offset-y  : calc(var(--circle-offset-x) * -1);
  margin-block-start : var(--circle-offset-x);
  margin-inline-end  : var(--circle-offset-x);
  max-width          : 320px;
  width              : 100%;
  align-self         : start;
  position           : relative;
  margin-inline      : auto;
  flex-grow          : 1;

  &::before {
	content       : "";
	position      : absolute;
	inset         : 0;
	border        : 6px solid var(--c-text);
	z-index       : 1;
	border-radius : 999rem;
	transform     : translate(var(--circle-offset-x), var(--circle-offset-y));
  }

}

.avatar__image-wrapper {
  border-radius    : 999rem;
  z-index          : 0;
  background-color : var(--c-accent);
  @include mx.desktop() {
	min-width : 320px;
  }
}


.intro__title {
  display        : flex;
  flex-direction : column;
  gap            : var(--size-lg);
  @include mx.desktop() {
	flex-direction : row;
	align-items    : end;
  }
}

.intro__title__label {
  font-family : var(--font-type-base);
  font-size   : var(--font-size-4);
}

.intro__title__arrows {
  width : var(--size-icon);
  @include mx.desktop() {
	margin-block-end : var(--size-xs);
  }
}

.intro__subtitle {
  color          : var(--c-accent);
  font-family    : var(--font-type-display);
  font-size      : min(calc(15vw + 1rem), 16rem);
  text-transform : uppercase;
  position       : relative;
}

.intro__subtitle__waves {
  width               : var(--size-icon);
  margin-inline-start : auto;
  position            : absolute;
  right               : calc((var(--size-icon) / 2) * -1);
  bottom              : calc(var(--size-xl) * -1);
  @include mx.mobile() {
	display : none;
  }
}

.intro__about {
  max-width : 50ch;
  color     : var(--c-text-dimmed);
}

.intro__info {
  display : grid;
  gap     : var(--size-xl);
  @include mx.desktop() {
	grid-template-columns : repeat(2, 1fr);
  }
}

//-------------------------------------------------------------
// Skills
//-------------------------------------------------------------
.skills {

}

.skill-tags {
  display            : flex;
  flex-wrap          : wrap;
  gap                : var(--size-md);
  margin-block-start : var(--size-lg);
  max-width          : 60ch;
}

.skill__tag {
  display          : inline-flex;
  padding          : var(--size-xs) var(--size-md);
  background-color : var(--c-bg-2);
  color            : var(--c-accent);
  border           : 2px solid var(--c-bg-3);
  border-radius    : 999rem;
  font-weight      : 700;
}

.get-in-touch {
  background-color : var(--c-grey-7);
  padding-block    : var(--size-xxl);
}

